# rand_bench

./: .gitignore  .pdm-python  01_quantum_volume.ipynb  01_randomized_benchmarking.ipynb  02_quantum_volume.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
examples/: _logging.py  quantum_volume.ipynb  qv.py  rand_bench.py  randomized_benchmarking.ipynb
qpu_bench/: quantum_volume.py  rand_bench.py  runner.py
rb/: prob_distr.py  quantum_volume.py  rand_bench.py  runner.py  util.py
report/: .gitignore  Makefile  README.md  abstract.tex  conclusion.tex  introduction.tex  paper-layout.tex  paper.bbl  paper.out  paper.tex  references.bib  section1.tex
tests/: test_rand_bench.py  test_rb.py
